--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <body>
     
     <div>
-        <button type="button" class="btn btn-primary" id="increase" value="0" onclick="counter1()">Increase +</button>
-        <input type="number" value="0">
-        <button type="button" class="btn btn-success" id="decrease" value="0" onclick="counter2()">Decrease -</button>
-
+        <button class="btn btn-primary" id="increase">Increase +</button>
+        <input type="number" value="0" id="countDisplay">
+        <button class="btn btn-success" id="decrease">Decrease -</button>
     </div>
 
 
