--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     
     <div>
+        <h1 id="countDisplay">()</h1>
         <button class="btn btn-primary" id="increase">Increase +</button>
-        <input type="number" value="0" id="countDisplay">
         <button class="btn btn-success" id="decrease">Decrease -</button>
     </div>
 
