--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div>
-        <h1 id="countDisplay">()</h1>
+        <h1 id="countDisplay"></h1>
         <button class="btn btn-primary" id="increase">Increase +</button>
         <button class="btn btn-success" id="decrease">Decrease -</button>
     </div>
